<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_my_account"
            android:title="@string/my_account" />
    </group>

    <item android:title="Navigation">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_my_home"

                android:title="@string/POD_title" />

            <item
                android:id="@+id/nav_saved_pictures"
                android:icon="@drawable/ic_my_image"

                android:title="@string/Saved_pics_title" />
            <item
                android:id="@+id/nav_about_nasa"
                android:icon="@drawable/ic_news"

                android:title="About NASA" />
            <item
                android:id="@+id/nav_about_artemis"
                android:icon="@drawable/ic_news"

                android:title="About Artemis" />

        </menu>


    </item>


</menu>
